<resources>
    <string name="app_name">Sales Management</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_product">Product</string>

    <string name="customer_profile">Customer Profile</string>

    <!--    Product strings-->
    <string name="product_name_key">Name:</string>
    <string name="product_type_key">Type:</string>
    <string name="product_brand_key">Brand:</string>
    <string name="product_size_key">Size:</string>
    <string name="product_price_key">Price:</string>
    <string name="product_quantity_key">Quantity:</string>
    <string name="product_description_key">Description:</string>
    <string name="product_color_key">Color:</string>

    <!--    Label Strings-->
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>

    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="color">Color</string>

    <!--    Actions-->
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!--    Customer view-->
    <string name="customer_empty">There are no customers yet</string>

    <!--    Product view-->
    <string name="product_empty">There are no products yet</string>

    <!-- Graph Labels -->
    <string name="graph_insert_customer">Insert Customer</string>
    <string name="graph_insert_product">Insert Product</string>
    <string name="graph_update_customer">Update Customer</string>
    <string name="graph_update_product">Update Product</string>
</resources>