<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.salesmanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--  CUSTOMER  -->
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.salesmanagement.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer">

        <action
            android:id="@+id/action_nav_customer_to_nav_insert_customer"
            app:destination="@id/nav_insert_customer" />
        <action
            android:id="@+id/action_nav_customer_to_nav_update_customer"
            app:destination="@id/nav_update_customer" />
    </fragment>

    <!--  INSERT CUSTOMER  -->
    <fragment
        android:id="@+id/nav_insert_customer"
        android:name="com.example.salesmanagement.ui.customer.insert.InsertCustomerFragment"
        android:label="@string/graph_insert_customer"
        tools:layout="@layout/fragment_insert_customer">
        <action
            android:id="@+id/action_nav_insert_customer_to_nav_customer"
            app:destination="@id/nav_customer" />
    </fragment>


    <!--  UPDATE CUSTOMER  -->
    <fragment
        android:id="@+id/nav_update_customer"
        android:name="com.example.salesmanagement.ui.customer.update.UpdateCustomerFragment"
        android:label="@string/graph_update_customer"
        tools:layout="@layout/fragment_update_customer">
        <action
            android:id="@+id/action_nav_update_customer_to_nav_customer"
            app:destination="@id/nav_customer" />
        <argument
            android:name="currentCustomer"
            app:argType="com.example.salesmanagement.database.entities.Customer" />
    </fragment>

    <!--  PRODUCT  -->
    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.salesmanagement.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product">

        <action
            android:id="@+id/action_nav_product_to_nav_insert_product"
            app:destination="@id/nav_insert_product" />

    </fragment>

    <!--  INSERT PRODUCT  -->
    <fragment
        android:id="@+id/nav_insert_product"
        android:name="com.example.salesmanagement.ui.product.insert.InsertProductFragment"
        android:label="@string/graph_insert_product"
        tools:layout="@layout/fragment_insert_product">
        <action
            android:id="@+id/action_nav_insert_product_to_nav_product"
            app:destination="@id/nav_product" />
    </fragment>
</navigation>